# icloud-file-sorter

./: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  get_issues.sh  package-lock.json  pyproject.toml  requirements.txt
.planning/: ICLOUD-SORTER-EPIC3-PHASE1-PLAN.md  ICLOUD-SORTER-EPIC3-PHASE2-PLAN.md  ICLOUD-SORTER-EPIC3-PHASE3-PLAN.md  ICLOUD-SORTER-EPIC3-PHASE4-PLAN.md  ICLOUD-SORTER-EPIC3-PHASE5-PLAN.md  ICLOUD-SORTER-EPIC3-PLAN.md  ICLOUD-SORTER-EPIC4-PLAN.md  ICLOUD-SORTER-EPIC4-PRE-PHASE3-FIXES-PLAN.md  ICLOUD-SORTER-EPIC4-SONARQUBE-FINDINGS-PLAN.md  ICLOUD-SORTER-PLAN.md  PERSIST-ICLOUD-SESSIONS-PLAN.md  PROJECT-OVERVIEW.md  REVIEW-FOLLOWUPS.md
app/: logger.py  main.py  scanner.py  settings.py  webview_app.py
app/api/: auth_api.py
app/icloud/: albums_service.py  auth.py  icloud_service.py  session_store.py
app/sorting/: __init__.py  album_folders.py  file_operations.py  multi_album.py  sort_job.py
app/state/: sort_state.py
app/ui/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/tests/: albums.test.js  login.test.js  main.test.js  settings.test.js
src/backend/: main.py
tests/: test_album_folders.py  test_auth.py  test_epic4_phase5_ui.py  test_file_operations.py  test_main.py  test_main_api_bridge.py  test_multi_album.py  test_settings.py  test_sort_job.py  test_sort_state.py  test_sorting_services.py  test_webview_app.py  test_webview_bridge.py
tests/auth/: test_auth_e2e.py  test_auth_unit.py  test_session_persistence.py
(+24 files in other folders)
