[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN"]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icloud-webview-app"
version = "0.1.0"
description = "Python app using pyicloud and pywebview"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyicloud",
    "pywebview",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
